Version 0.0.2
--------------
+ Added translate functions