@@ -1,3 +1,7 @@
 Version 0.0.2
 --------------
+19 February 2007
++ Moved and removed translate functions.
+
+14 February 2007
 + Added translate functions
